# starship-game

./: CMakeLists.txt  LICENSE
assets/: Arrow.xcf  Background.xcf  Enemy.xcf  Explosion.xcf  Heart.xcf  immunity.fs  laser.xcf  starship.xcf  stone.xcf
src/: main.c
